// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateWidgetForm /> should renders correctly 1`] = `
<ForwardRef
  direction="column"
>
  <Text
    mb={4}
  >
    help-widget-integration
  </Text>
  <ForwardRef
    direction="column"
    spacing={2}
  >
    <Text>
      <Text
        as="span"
      >
        widget-appearance
      </Text>
      <Text
        as="span"
        color="gray.500"
      >
        global.optional
      </Text>
    </Text>
    <ForwardRef
      direction="row"
      spacing={2}
    >
      <Field
        component={[Function]}
        label={
          <Text
            fontWeight="normal"
          >
            <FormattedMessage
              id="background"
              values={Object {}}
            />
          </Text>
        }
        name="widget.background"
        type="color-picker"
      />
      <Field
        component={[Function]}
        label={
          <Text
            fontWeight="normal"
          >
            <FormattedMessage
              id="border"
              values={Object {}}
            />
          </Text>
        }
        name="widget.border"
        type="color-picker"
      />
      <Field
        component={[Function]}
        label={
          <Text
            fontWeight="normal"
          >
            <FormattedMessage
              id="global.width"
              values={Object {}}
            />
          </Text>
        }
        name="widget.width"
        type="text"
      />
      <Field
        component={[Function]}
        label={
          <Text
            fontWeight="normal"
          >
            <FormattedMessage
              id="global.height"
              values={Object {}}
            />
          </Text>
        }
        name="widget.height"
        type="text"
      />
    </ForwardRef>
    <Field
      component={[Function]}
      label={
        <ForwardRef
          direction="row"
        >
          <Text
            fontWeight="normal"
          >
            <Text
              as="span"
            >
              destination-link
            </Text>
            <Text
              as="span"
              color="gray.500"
            >
              global.optional
            </Text>
          </Text>
          <Tooltip
            label="allow-display-contributions-sources"
          >
            <AppBox>
              <Icon
                color="blue.500"
                name="CIRCLE_INFO"
                size="md"
              />
            </AppBox>
          </Tooltip>
        </ForwardRef>
      }
      name="widget.destination"
      placeholder="paste-widget-destination-link"
      type="text"
    />
  </ForwardRef>
  <ForwardRef
    direction="column"
    spacing={2}
  >
    <ForwardRef
      direction="row"
      spacing={1}
    >
      <Text
        bg="white"
        color="gray.900"
      >
        <FormattedMessage
          id="integration-code"
          values={Object {}}
        />
      </Text>
      <Tooltip
        label="copy-paste-in-html-page"
      >
        <AppBox>
          <Icon
            color="blue.500"
            name="CIRCLE_INFO"
            size="md"
          />
        </AppBox>
      </Tooltip>
    </ForwardRef>
    <AppBox
      bg="white"
      border="normal"
      borderColor="gray.300"
      borderRadius="normal"
      pb={6}
      position="relative"
      px={3}
      py={1}
    >
      <Text
        color="gray.900"
      >
        &lt;iframe src="http://localhost/widget_debate/debate-123?background=fff" width="100%" style="border: 1px solid #fff; height: 90vh"&gt;&lt;/iframe&gt;
      </Text>
      <CopyLinkButton
        value="<iframe src=\\"http://localhost/widget_debate/debate-123?background=fff\\" width=\\"100%\\" style=\\"border: 1px solid #fff; height: 90vh\\"></iframe>"
      >
        <Component />
      </CopyLinkButton>
    </AppBox>
  </ForwardRef>
</ForwardRef>
`;

exports[`<DebateWidgetForm /> should renders correctly with widget destination 1`] = `
<ForwardRef
  direction="column"
>
  <Text
    mb={4}
  >
    help-widget-integration
  </Text>
  <ForwardRef
    direction="column"
    spacing={2}
  >
    <Text>
      <Text
        as="span"
      >
        widget-appearance
      </Text>
      <Text
        as="span"
        color="gray.500"
      >
        global.optional
      </Text>
    </Text>
    <ForwardRef
      direction="row"
      spacing={2}
    >
      <Field
        component={[Function]}
        label={
          <Text
            fontWeight="normal"
          >
            <FormattedMessage
              id="background"
              values={Object {}}
            />
          </Text>
        }
        name="widget.background"
        type="color-picker"
      />
      <Field
        component={[Function]}
        label={
          <Text
            fontWeight="normal"
          >
            <FormattedMessage
              id="border"
              values={Object {}}
            />
          </Text>
        }
        name="widget.border"
        type="color-picker"
      />
      <Field
        component={[Function]}
        label={
          <Text
            fontWeight="normal"
          >
            <FormattedMessage
              id="global.width"
              values={Object {}}
            />
          </Text>
        }
        name="widget.width"
        type="text"
      />
      <Field
        component={[Function]}
        label={
          <Text
            fontWeight="normal"
          >
            <FormattedMessage
              id="global.height"
              values={Object {}}
            />
          </Text>
        }
        name="widget.height"
        type="text"
      />
    </ForwardRef>
    <Field
      component={[Function]}
      label={
        <ForwardRef
          direction="row"
        >
          <Text
            fontWeight="normal"
          >
            <Text
              as="span"
            >
              destination-link
            </Text>
            <Text
              as="span"
              color="gray.500"
            >
              global.optional
            </Text>
          </Text>
          <Tooltip
            label="allow-display-contributions-sources"
          >
            <AppBox>
              <Icon
                color="blue.500"
                name="CIRCLE_INFO"
                size="md"
              />
            </AppBox>
          </Tooltip>
        </ForwardRef>
      }
      name="widget.destination"
      placeholder="paste-widget-destination-link"
      type="text"
    />
  </ForwardRef>
  <ForwardRef
    direction="column"
    spacing={2}
  >
    <ForwardRef
      direction="row"
      spacing={1}
    >
      <Text
        bg="white"
        color="gray.900"
      >
        <FormattedMessage
          id="integration-code"
          values={Object {}}
        />
      </Text>
      <Tooltip
        label="copy-paste-in-html-page"
      >
        <AppBox>
          <Icon
            color="blue.500"
            name="CIRCLE_INFO"
            size="md"
          />
        </AppBox>
      </Tooltip>
    </ForwardRef>
    <AppBox
      bg="white"
      border="normal"
      borderColor="gray.300"
      borderRadius="normal"
      pb={6}
      position="relative"
      px={3}
      py={1}
    >
      <Text
        color="gray.900"
      >
        &lt;iframe src="http://localhost/widget_debate/debate-123?background=fff&destination=https://google.com" width="100%" style="border: 1px solid #fff; height: 90vh"&gt;&lt;/iframe&gt;
      </Text>
      <CopyLinkButton
        value="<iframe src=\\"http://localhost/widget_debate/debate-123?background=fff&destination=https://google.com\\" width=\\"100%\\" style=\\"border: 1px solid #fff; height: 90vh\\"></iframe>"
      >
        <Component />
      </CopyLinkButton>
    </AppBox>
  </ForwardRef>
</ForwardRef>
`;
